Added prepareHivemqHome and runHivemqWithExtension tasks